{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 36,
  "lineage": "7d32fe83-bcef-86db-b16c-d7b8f4903589",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01f20c53ed8da4679",
            "arn": "arn:aws:ec2:us-east-1:366142015340:instance/i-0667927ca4b54f82f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0667927ca4b54f82f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-073bde61510b9dc23",
            "private_dns": "ip-10-0-101-65.ec2.internal",
            "private_ip": "10.0.101.65",
            "public_ip": "3.238.67.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02006ef6de69910bb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03eb0d5c508755bc7",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemoec2dev01",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemoec2dev01",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "itawsdemoec2dev01"
            },
            "vpc_security_group_ids": [
              "sg-035cec9326879c3d8"
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0cf38562b4078638b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-207-76-242.compute-1.amazonaws.com",
            "public_ip": "52.207.76.242",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-use1-az1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-use1-az1",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0bc81cdecac256da7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-22-216-186.compute-1.amazonaws.com",
            "public_ip": "23.22.216.186",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-use1-az2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-use1-az2",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-043dcaa521d1ce770",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-204-236-235-248.compute-1.amazonaws.com",
            "public_ip": "204.236.235.248",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-use1-az3",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-use1-az3",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:internet-gateway/igw-00ddab8d5d2a53a41",
            "id": "igw-00ddab8d5d2a53a41",
            "owner_id": "366142015340",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f3afcc3d1d4a4e06"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cf38562b4078638b",
            "connectivity_type": "public",
            "id": "nat-0a08c1ead8cbf4f50",
            "network_interface_id": "eni-0bcd537c85fb614e1",
            "private_ip": "10.0.101.72",
            "public_ip": "52.207.76.242",
            "subnet_id": "subnet-03eb0d5c508755bc7",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-use1-az1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-use1-az1",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bc81cdecac256da7",
            "connectivity_type": "public",
            "id": "nat-0c1f7f21f6459d90e",
            "network_interface_id": "eni-07cf2d70bf203bd0c",
            "private_ip": "10.0.102.228",
            "public_ip": "23.22.216.186",
            "subnet_id": "subnet-08f31927840c7dac6",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-use1-az2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-use1-az2",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-043dcaa521d1ce770",
            "connectivity_type": "public",
            "id": "nat-0c3a810a3f4629c05",
            "network_interface_id": "eni-0d5414a4030c5517c",
            "private_ip": "10.0.103.61",
            "public_ip": "204.236.235.248",
            "subnet_id": "subnet-0394d81833315e6d7",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-use1-az3",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-use1-az3",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bfd4d395893c83dd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a08c1ead8cbf4f50",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bfd4d395893c83dd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d9429ad20ca9620e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c1f7f21f6459d90e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d9429ad20ca9620e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00ecffbb76489d2681080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c3a810a3f4629c05",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00ecffbb76489d268",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00ddab8d5d2a53a41",
            "id": "r-rtb-057c2357ffe5209291080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-057c2357ffe520929",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:route-table/rtb-0bfd4d395893c83dd",
            "id": "rtb-0bfd4d395893c83dd",
            "owner_id": "366142015340",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-private-use1-az1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-private-use1-az1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f3afcc3d1d4a4e06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:route-table/rtb-0d9429ad20ca9620e",
            "id": "rtb-0d9429ad20ca9620e",
            "owner_id": "366142015340",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-private-use1-az2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-private-use1-az2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f3afcc3d1d4a4e06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:route-table/rtb-00ecffbb76489d268",
            "id": "rtb-00ecffbb76489d268",
            "owner_id": "366142015340",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-private-use1-az3",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-private-use1-az3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f3afcc3d1d4a4e06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:route-table/rtb-057c2357ffe520929",
            "id": "rtb-057c2357ffe520929",
            "owner_id": "366142015340",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f3afcc3d1d4a4e06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000c83432b3edf9e8",
            "route_table_id": "rtb-0bfd4d395893c83dd",
            "subnet_id": "subnet-0ec06e7d5acbf1b9d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee18b2cce2178e74",
            "route_table_id": "rtb-0d9429ad20ca9620e",
            "subnet_id": "subnet-04434f4d2ff9fd32e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bd6347de3781313",
            "route_table_id": "rtb-00ecffbb76489d268",
            "subnet_id": "subnet-08ecab4f05ab4a0a4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d72e67f3944e0d68",
            "route_table_id": "rtb-057c2357ffe520929",
            "subnet_id": "subnet-03eb0d5c508755bc7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0898f91b87955734e",
            "route_table_id": "rtb-057c2357ffe520929",
            "subnet_id": "subnet-08f31927840c7dac6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f6c9fe0de0ca636",
            "route_table_id": "rtb-057c2357ffe520929",
            "subnet_id": "subnet-0394d81833315e6d7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:subnet/subnet-0ec06e7d5acbf1b9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ec06e7d5acbf1b9d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "366142015340",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-private-use1-az1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-private-use1-az1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f3afcc3d1d4a4e06"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:subnet/subnet-04434f4d2ff9fd32e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-04434f4d2ff9fd32e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "366142015340",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-private-use1-az2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-private-use1-az2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f3afcc3d1d4a4e06"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:subnet/subnet-08ecab4f05ab4a0a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-08ecab4f05ab4a0a4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "366142015340",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-private-use1-az3",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-private-use1-az3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f3afcc3d1d4a4e06"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:subnet/subnet-03eb0d5c508755bc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-03eb0d5c508755bc7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "366142015340",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-public-use1-az1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-public-use1-az1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f3afcc3d1d4a4e06"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:subnet/subnet-08f31927840c7dac6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-08f31927840c7dac6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "366142015340",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-public-use1-az2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-public-use1-az2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f3afcc3d1d4a4e06"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:subnet/subnet-0394d81833315e6d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-0394d81833315e6d7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "366142015340",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-public-use1-az3",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01-public-use1-az3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f3afcc3d1d4a4e06"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:366142015340:vpc/vpc-0f3afcc3d1d4a4e06",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-059d0607839de15ee",
            "default_route_table_id": "rtb-08fe370b7d0809b2a",
            "default_security_group_id": "sg-035cec9326879c3d8",
            "dhcp_options_id": "dopt-f402158e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f3afcc3d1d4a4e06",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08fe370b7d0809b2a",
            "owner_id": "366142015340",
            "tags": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "itawsdemovpcdev01",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}